@@ -1,5 +1,10 @@
 2002-08-29  Christopher Armstrong  <radix@twistedmatrix.com>
 
+        * Releasing Twisted 0.99.1rc3. A bug in the release script
+	left .pyc files in the tarball.
+
+2002-08-29  Christopher Armstrong  <radix@twistedmatrix.com>
+
 	* Releasing Twisted 0.99.1rc2. There was a bug with circular
 	imports between modules in twisted.python.
 
